# M5Cardputer-UserDemo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  flash.sh  hotplugSetup.sh  partitions.csv  sdkconfig  sdkconfig.old
components/: mc_conf.h
components/mooncake/example/framework/: CMakeLists.txt  app_manager_basic.cpp  app_register_test.cpp  app_user_data_test.cpp  input_device_register_test.cpp  mooncake_framework_test.cpp  simplekv_test.cpp
main/: CMakeLists.txt  Kconfig.projbuild  cardputer.cpp  idf_component.yml
main/apps/: apps.h
main/apps/app_chat/: app_chat.cpp  app_chat.h
main/apps/app_chat/assets/: chat_big.h  chat_small.h
main/apps/app_hello/: app_hello.cpp  app_hello.h
main/apps/app_hello/assets/: hello_big.h  hello_big_array.txt  hello_full_array.txt  hello_small.h  hello_small_array.txt
main/apps/app_ir/: app_ir.cpp  app_ir.h
main/apps/app_ir/assets/: ir_big.h  ir_small.h
main/apps/app_keyboard/: app_keyboard.cpp  app_keyboard.h
main/apps/app_keyboard/assets/: keyboard_big.h  keyboard_small.h
main/apps/app_keyboard/ble_keyboard/: ble_keyboarad.cpp
main/apps/app_keyboard/select_menu/: select_menu.cpp
main/apps/app_keyboard/usb_keyboard/: usb_keyboard.cpp
main/apps/app_record/: app_record.cpp  app_record.h
main/apps/app_record/assets/: record_big.h  record_small.h
main/apps/app_repl/: app_repl.cpp  app_repl.h
main/apps/app_repl/assets/: repl_big.h  repl_small.h
main/apps/app_repl/pikapython/: main.py  requestment.txt
main/apps/app_set_wifi/: app_set_wifi.cpp  app_set_wifi.h
main/apps/app_set_wifi/assets/: set_wifi_big.h  set_wifi_small.h
main/apps/app_texteditor/: app_texteditor.cpp  app_texteditor.h
main/apps/app_texteditor/assets/: texteditor_big.h  texteditor_small.h
main/apps/app_timer/: app_timer.cpp  app_timer.h
main/apps/app_timer/assets/: timer_big.h  timer_small.h
main/apps/app_wifi_scan/: app_wifi_scan.cpp  app_wifi_scan.h
main/apps/app_wifi_scan/assets/: scan_big.h  scan_small.h
main/apps/launcher/: launcher.cpp  launcher.h
main/apps/launcher/port/: port.cpp
main/apps/utils/: common_define.h
main/hal/: hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/bat/: adc_read.c  adc_read.h
main/hal/button/: Button.cpp  Button.h  keywords.txt
main/hal/display/: hal_display.hpp
main/hal/keyboard/: keyboard.cpp  keyboard.h  keymap.h
main/hal/mic/: Mic_Class.cpp  Mic_Class.hpp
main/hal/sdcard/: sdcard.cpp  sdcard.h
main/hal/speaker/: Speaker_Class.cpp  Speaker_Class.hpp
(+91 files in other folders)
